# hexedit

./: .gitignore  .travis.yml  CONTRIBUTING.md  Doxyfile  LICENSE.md  Makefile.am  README.md  bootstrap.sh  configure.ac  pre-commit.sh
docs/: contributing.dox  license.dox  mainpage.dox
include/: hexedit.h
src/: hexedit.cpp  main.cpp
tests/: test.cpp
