#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hexedit], [0.1.2], [mail@rzelnick.com])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.15 foreign subdir-objects])
AX_CHECK_ENABLE_DEBUG([no])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
